# soc-agents-system

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
scenarios/: benign_admin_login.json  prompt_injection_attempt.json  reverse_shell.json
tests/: test_alert_processor.py  test_enrichment_engine.py  test_enrichments.py  test_prompt_injection_guardrail.py  test_reasoning_engine.py
triagen_core/: alert_processor.py  alert_processor_test.md  cli.py  enrichment_engine.py  reasoning_engine.py  testing.md
triagen_core/enrichments/: command_flags.py  file_paths.py  hostname_check.py  ip_extractor.py  network_tools.py  time_heuristics.py  user_privilege.py
triagen_core/guardrails/: prompt_injection.py
